--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "Home Page"
 ---
 
 <html lang="en">
@@ -11,7 +11,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+		<a href="/">{pageTitle}</a>
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
 		<h1>Astro Site</h1>
